# merc

./: Cargo.toml  README.md  WORKFLOW.md  docker-compose.yml
.cargo/: config.toml
backlog/: 01-collection-ops.md  01-config-integration.md  01-control-result-ops.md  01-error-aggregation.md  01-multi-file-merge.md  01-time-operators.md  02-cli-command-structs.md  02-collection-ops.md  02-control-flow-ops.md  02-multi-file-merge.md  02-time-operators.md  02-validation.md  03-cli-command-structs.md  03-multi-file-merge.md  03-pipeline-rewrite.md  03-result-operators.md  03-time-operators.md  04-collection-ops.md  04-dynamic-layers.md  04-multi-file-merge.md  05-output-behavior.md  05-time-operators.md  06-fork-join.md  06-multi-file-merge.md  07-simplify-structure.md  08-result-metadata.md  09-error-aggregation.md  10-control-flow-ops.md  11-result-operators.md  12-collection-ops.md  13-time-operators.md  README.md
bins/worker/: Cargo.toml
configs/: basic.config.yaml  score.config.yaml
datasets/: label.samples.json  locomo.samples.json  longmemeval.samples.json  multi_session_chat.samples.json
docs/: 1.MEMORY.md  1.memory.md  2.ENTITY.md  (+11 more)
libs/loom/: Cargo.toml  README.md
libs/loom-cli/: BACKLOG.md  Cargo.toml
libs/loom-cli/backlog/: README.md
libs/loom-cli/src/: bench.rs  main.rs
libs/loom-cli/src/bench/: cov.rs  mod.rs  run.rs  score.rs  train.rs  validate.rs
libs/loom-cli/src/commands/: classify.rs  mod.rs  run.rs  score.rs  train.rs  validate.rs
libs/loom-codec/: Cargo.toml  README.md
libs/loom-codec/src/: json.rs  lib.rs  registry.rs  text.rs  text_codec.rs  toml.rs  toml_codec.rs  yaml.rs
libs/loom-core/: Cargo.toml  README.md
libs/loom-core/src/: format.rs  lib.rs  map.rs  media_type.rs
libs/loom-core/src/path/: error.rs  mod.rs
libs/loom-core/src/path/uri/: authority.rs  error.rs  mod.rs  scheme.rs
libs/loom-core/src/value/: array.rs  mod.rs  number.rs  object.rs
libs/loom-cortex/: Cargo.toml  README.md
libs/loom-cortex/src/: lib.rs  model.rs
libs/loom-cortex/src/bench/: category.rs  coverage.rs  dataset.rs  decision.rs  difficulty.rs  mod.rs  progress.rs  runner.rs  sample.rs  scorer.rs
libs/loom-cortex/src/bench/platt/: export.rs  mod.rs  params.rs  training.rs
libs/loom-cortex/src/bench/result/: bench.rs  category.rs  label.rs  mod.rs  sample.rs
libs/loom-cortex/src/config/: mod.rs  model_config.rs  ner.rs  pos_tagging.rs  sentiment.rs  summarization.rs  text_generation.rs  translation.rs
libs/loom-io/: Cargo.toml  README.md
libs/loom-io/src/: document.rs  entity.rs  error.rs  id.rs  lib.rs  registry.rs
libs/loom-io/src/sources/: file_system_source.rs  memory_source.rs
libs/loom-pipe/: BACKLOG.md  CHANGELOG.md  Cargo.toml  README.md
libs/loom-pipe/src/: lib.rs  source.rs  transformer.rs
libs/loom-pipe/src/operators/: branch.rs  fan_out.rs  filter.rs  guard.rs  logical.rs  map.rs  mod.rs  parallel.rs  result.rs  router.rs  sequence.rs  spawn.rs  time.rs  try_map.rs  wait.rs
libs/loom-pipe/src/pipeline/: builder.rs  context.rs  node.rs
libs/loom-runtime/: BACKLOG.md  CHANGELOG.md  Cargo.toml  README.md
libs/loom-runtime/src/: config.rs  context.rs  format.rs  lib.rs  media_type.rs  result.rs
libs/loom-runtime/src/bench/: dataset.rs  mod.rs  runner.rs
libs/loom-runtime/src/bench/runner/: async.rs  batch.rs  config.rs  helpers.rs  instrumented.rs  mod.rs  sync.rs
libs/loom-runtime/src/codec/: error.rs  json_codec.rs  mod.rs  yaml_codec.rs
libs/loom-runtime/src/data_source/: etag.rs  mod.rs  record.rs
libs/loom-runtime/src/data_source/sources/: file_system_source.rs  json_source.rs  memory_source.rs  mod.rs  yaml_source.rs
libs/loom-runtime/src/eval/: dataset.rs  mod.rs  sample.rs  validation.rs
libs/loom-runtime/src/eval/result/: category.rs  eval.rs  export.rs  label.rs  metrics.rs  mod.rs  sample.rs
libs/loom-runtime/src/eval/score/: mod.rs  result.rs
libs/loom-runtime/src/eval/score/config/: category.rs  label.rs  mod.rs  modifier.rs
libs/loom-runtime/src/layer/: registry.rs
libs/loom-runtime/src/model/: config.rs  local_config.rs  mod.rs  model_type.rs  remote_config.rs
libs/loom-runtime/src/path/: field.rs  file.rs
libs/loom-runtime/src/score/: mod.rs  options.rs  result.rs
libs/loom-runtime/src/score/config/: category.rs  label.rs  mod.rs  modifier.rs
libs/loom/src/: lib.rs
libs/merc/: Cargo.toml
libs/merc-cli/: Cargo.toml  README.md
libs/merc-cli/src/: bench.rs  main.rs
libs/merc-engine/: Cargo.toml
libs/merc-engine/docs/: README.md
libs/merc-engine/docs/analysis/: memory-system-comparison.md
libs/merc-engine/docs/merc/: 1.foundation.md  4.learning.md  implementation-backlog.md  improvement-proposals.md  scoring-algorithm.md
libs/merc-engine/docs/research/: hindsight-reference.md
libs/merc-engine/src/: lib.rs
libs/merc-engine/src/bench/: mod.rs  runner.rs
libs/merc-engine/src/score/: label.rs  mod.rs  options.rs  result.rs  threshold.rs
libs/merc-sync/: Cargo.toml
libs/merc-sync/src/chan/: error.rs  mod.rs  status.rs
libs/merc-sync/src/chan/tokio/: mod.rs  receiver.rs  sender.rs
libs/merc-sync/src/tasks/: error.rs  join.rs  mod.rs  resolver.rs  result.rs  status.rs  task.rs  tokio.rs
libs/merc/src/: lib.rs
merc-api/: Cargo.toml
merc-api/src/: context.rs  main.rs
merc-api/src/routes/: ingest.rs
merc-storage/: Cargo.toml  README.md
merc-storage/src/: facet_storage.rs  lib.rs  memory_source_storage.rs  memory_storage.rs  source_storage.rs  trace_action_storage.rs  trace_storage.rs
merc-storage/src/entity/: facet.rs  memory.rs  memory_source.rs  mod.rs  sensitivity.rs  source.rs  status.rs  trace.rs  trace_action.rs
merc-worker/: Cargo.toml  Dockerfile
merc-worker/src/: main.rs
scripts/: Cargo.toml
scripts/fetch_datasets/: Cargo.toml
scripts/fetch_datasets/src/: main.rs
scripts/fetch_datasets/src/datasets/: mod.rs  multi_session_chat.rs
scripts/src/: main.rs  sample.rs  widgets.rs
scripts/src/commands/datasets/: fetch.rs  mod.rs
scripts/src/datasets/: daily_dialog.rs  locomo.rs  longmemeval.rs  mod.rs  msc_self_instruct.rs
(+105 files in other folders)
