[workspace]
resolver = "3"
members = ["libs/*", "crates/*", "bins/*"]
default-members = ["libs/*", "crates/*", "bins/*"]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
readme = "README.md"
documentation = "https://www.github.com/aacebo/merc"
homepage = "https://www.github.com/aacebo/merc"
repository = "https://www.github.com/aacebo/merc"

[workspace.dependencies]

# libs (public)
merc = { path = "./libs/merc", version = "0.0.1" }
merc-sync = { path = "./libs/merc-sync", version = "0.0.1" }
merc-error = { path = "./libs/merc-error", version = "0.0.1" }
merc-engine = { path = "./libs/merc-engine", version = "0.0.1" }

# crates (private)
events = { path = "./crates/events", version = "0.0.1" }
storage = { path = "./crates/storage", version = "0.0.1" }

# 3rd party
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["default", "derive"] }
serde_json = { version = "1" }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
tokio = { version = "1" }
