[workspace]
resolver = "3"
members = ["libs/*", "crates/*", "bins/*"]
default-members = ["libs/*", "crates/*", "bins/*"]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
documentation = "https://www.github.com/aacebo/loom"
homepage = "https://www.github.com/aacebo/loom"
repository = "https://www.github.com/aacebo/loom"

[workspace.dependencies]
# libs (public)
loom = { path = "./libs/loom", version = "0.0.1" }
loom-assert = { path = "./libs/loom-assert", version = "0.0.1" }
loom-codec = { path = "./libs/loom-codec", version = "0.0.1" }
loom-cortex = { path = "./libs/loom-cortex", version = "0.0.1" }
loom-config = { path = "./libs/loom-config", version = "0.0.1" }
loom-io = { path = "./libs/loom-io", version = "0.0.1" }
loom-core = { path = "./libs/loom-core", version = "0.0.1" }
loom-pipe = { path = "./libs/loom-pipe", version = "0.0.1" }
loom-sync = { path = "./libs/loom-sync", version = "0.0.1" }
loom-error = { path = "./libs/loom-error", version = "0.0.1" }
loom-runtime = { path = "./libs/loom-runtime", version = "0.0.1" }
loom-signal = { path = "./libs/loom-signal", version = "0.0.1" }

# crates (private)
events = { path = "./crates/events", version = "0.0.1" }
storage = { path = "./crates/storage", version = "0.0.1" }

# 3rd party
async-trait = { version = "0.1" }
blake3 = { version = "0.1" }
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["default", "derive"] }
serde_json = { version = "1" }
serde_valid = { version = "2.0" }
serde-saphyr = { version = "0.0.17" }
saphyr = { version = "0.0.3" }
toml = { version = "0.8" }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
tokio = { version = "1" }
futures = { version = "0.3" }