[package]
name = "merc-api"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
actix-web = { version = "4" }

merc-error = { workspace = true }
merc-storage = { workspace = true }