[package]
name = "merc-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio"] }