[package]
name = "merc-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
lapin = "2"
tokio = { version = "1", features = ["full"] }
futures-lite = "2"
