[package]
name = "merc-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
merc-events = { workspace = true }
merc-error = { workspace = true }