[package]
name = "scripts"
version = "0.0.1"
edition = "2024"

# Mark as separate workspace (not part of main loom workspace)
[workspace]

[[bin]]
name = "scripts"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# HTTP client with streaming
reqwest = { version = "0.12", features = ["stream", "json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ZIP extraction (cross-platform)
zip = "2"

# Terminal progress UX
crossterm = "0.28"

# Temp files
tempfile = "3"

# Error handling
anyhow = "1"

# Date formatting
chrono = "0.4"
