[package]
name = "worker"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
events = { workspace = true }
merc = { workspace = true, features = ["error"] }