[package]
name = "loom-core"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false

[features]
default = ["json"]
json = ["dep:serde_json"]
yaml = ["dep:saphyr"]
toml = ["dep:toml"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
saphyr = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
