[package]
name = "loom-cortex"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
loom-config = { workspace = true }
serde = { workspace = true }
tch = { version = "0.17" }
rust-bert = { version = "0.23" }
console = { version = "0.16", features = ["std"] }