[package]
name = "loom-pipe"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
loom-core = { workspace = true }
loom-error = { workspace = true }
loom-sync = { workspace = true, features = ["tokio"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
