[package]
name = "loom-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false

[features]
default = ["json"]
int = []
tokio = ["loom-sync/tokio"]
json = ["dep:serde_json"]
yaml = ["dep:saphyr"]

[dependencies]
async-trait = { workspace = true }
blake3 = { workspace = true }
rust-bert = { version = "0.23" }
tch = { version = "0.17" }
console = { version = "0.16", features = ["std"] }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
saphyr = { workspace = true, optional = true }

loom-error = { workspace = true }
loom-sync = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }