[package]
name = "merc-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false

[features]
tokio = ["dep:tokio"]

[dependencies]
tokio = { workspace = true, features = ["sync"], optional = true }
