[package]
name = "merc-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false

[features]
tokio = ["dep:tokio", "dep:futures"]

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true, optional = true }
tokio = { workspace = true, features = ["sync", "rt", "time"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "rt", "time", "macros", "rt-multi-thread"] }
