[package]
name = "merc"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false

[features]
error = ["dep:merc-error"]
engine = ["dep:merc-engine"]
sync = ["dep:merc-sync"]
tokio = ["merc-sync/tokio"]

[dependencies]
merc-error = { workspace = true, optional = true }
merc-engine = { workspace = true, optional = true }
merc-sync = { workspace = true, optional = true }