[package]
name = "fetch_datasets"
version.workspace = true
edition.workspace = true

[[bin]]
name = "fetch_datasets"
path = "src/main.rs"

[dependencies]
# HTTP client with streaming
reqwest = { version = "0.12", features = ["stream", "json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ZIP extraction (cross-platform)
zip = "2"

# Terminal progress UX
crossterm = "0.28"

# Temp files
tempfile = "3"

# Error handling
anyhow = "1"

# Date formatting
chrono = "0.4"
